# salary_calculator

./: CMakeLists.txt  README.md  main.c
